<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_usremodel">usremodel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contact_name">name here!</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Address">Address</string>
    <string name="Main_UserName">UserName</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Adding">Add item</string>
    <string name="Refesh">Refesh</string>
    <string name="Update">Update</string>
    <string name="Back">Back</string>
    <string name="con_tact_Name">Name</string>
    <string name="facebook_app_id">780466763312831</string>
    <string name="fb_login_protocol_scheme">fb780466763312831</string>
    <string name="facebook_client_token">b9a0a01dc14e11100496ab728d2071a5</string>
</resources>